[gd_scene load_steps=4 format=3 uid="uid://bsvp4mn0ot8fj"]

[ext_resource type="Script" uid="uid://c7svrwg4q2w7c" path="res://Menú principal/menú_principal.gd" id="1_kc1cq"]
[ext_resource type="Shader" uid="uid://bprswuikfccr1" path="res://Menú principal/menú principal.gdshader" id="1_kpshu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kc1cq"]
shader = ExtResource("1_kpshu")
shader_parameter/bg_color = Color(0.1, 0, 0.2, 1)
shader_parameter/grid_color = Color(0.8, 0.2, 1, 0.5)
shader_parameter/pulse_color = Color(0.4, 0, 1, 0.3)
shader_parameter/speed = 0.2
shader_parameter/grid_size = 40.0

[node name="MenúPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kc1cq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kc1cq")
layout_mode = 0
offset_right = 1147.0
offset_bottom = 644.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 287.0
offset_right = 826.0
offset_bottom = 92.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
offset_left = 438.0
offset_top = 35.0
offset_right = 478.0
offset_bottom = 75.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = -2.0
offset_right = 536.0
offset_bottom = 90.0

[node name="BtnMision1" type="Button" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 278.0
offset_right = 309.0
offset_bottom = 318.0

[node name="Label" type="Label" parent="BtnMision1"]
layout_mode = 0
offset_left = 19.0
offset_top = 7.0
offset_right = 80.0
offset_bottom = 30.0
text = "Misión1"

[node name="BtnMision2" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 389.0
offset_right = 311.0
offset_bottom = 434.0

[node name="Label" type="Label" parent="BtnMision2"]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 99.0
offset_bottom = 73.0
text = "Misión 2"

[node name="BtnMision3" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 282.0
offset_right = 560.0
offset_bottom = 331.0

[node name="Label" type="Label" parent="BtnMision3"]
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 84.0
offset_bottom = 37.0
text = "Misión 3"

[node name="BtnMision4" type="Button" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 388.0
offset_right = 565.0
offset_bottom = 432.0

[node name="Label" type="Label" parent="BtnMision4"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = 16.0
offset_top = 9.0
offset_right = 28.5
offset_bottom = 32.0
text = "Misión 4"

[node name="BtnMision5" type="Button" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 276.0
offset_right = 818.0
offset_bottom = 323.0

[node name="Label" type="Label" parent="BtnMision5"]
layout_mode = 0
offset_left = 23.0
offset_top = 11.0
offset_right = 88.0
offset_bottom = 34.0
text = "Mision 5"
